--- a/index.html
+++ b/index.html
@@ -52,12 +52,13 @@
       <div class="contenedor">
         <div class="presentacion">
           <h2>Hey</h2>
-          <h1>Soy Desarrollador Web avanzado y apacionado</h1>
+          <girgit >Soy Desarrollador Web avanzado y apacionado</girgit>
           <p>Web Developer</p>
           <a href="#SobreMi">Sobre mí</a>
         </div>
       </div>
       <div id="SobreMi" class="wave" style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M-3.10,65.63 C232.78,34.03 233.35,34.03 503.10,1.48 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: rgb(255, 255, 255);"></path></svg></div>
+    </div>
   </section>
 
   <section class="sobre-mi">
