Cambios es el diseño, detalle en el codigo agregado

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <meta property="og:title" content="Miguel Ángel Web">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://miguelangelweb.com">
+  <meta property="og:url" content="https://miguelportafolioweb.000webhostapp.com/">
   <meta property="og:image" content="">
 
   <link rel="manifest" href="site.webmanifest">
@@ -52,7 +52,7 @@
       <div class="contenedor">
         <div class="presentacion">
           <h2>Hey</h2>
-          <girgit >Soy Desarrollador Web avanzado y apacionado</girgit>
+          <h1>Soy Desarrollador Web <span>Front-End Apacionado</span></h1>
           <p>Web Developer</p>
           <a href="#SobreMi">Sobre mí</a>
         </div>
